# kaubo-features

./: .gitignore  AGENTS.md  Makefile.toml  README.md
lexer/: .clang-format  .clangd  CMakeLists.txt
lexer/cmake/: BuildSystem.cmake  Coverage.cmake  Settings.cmake  Test.cmake  Warnings.cmake  coverage_runner.py
lexer/src/: Highlight.h  Result.h  Utf8Utils.h  json.cpp  main.cpp  t.json  test.txt  tools.h
lexer/src/Lexer/: Builder.cpp  Builder.h  Lexer.h  Machines.h  StateMachine.cpp  StateMachine.h  StateMachineManager.h  Token.h  TokenType.h  Type.h  Utils.h  main.cpp
lexer/src/Parser/: Common.h  Error.h  Expr.h  JsonParser.cpp  JsonParser.h  Listener.h  Module.h  Parser.cpp  Parser.h  Stmt.h  Utils.h
lexer/src/Utils/: Overloaded.h  Result.h  ResultHelper.h  RingBuffer.h  StringBuilder.h  System.h  Utf8.h
lexer/test/programs/: a.json  a.kaubo
lexer/test/unittest/: Result.cmake  Result.cpp  Utf8.cmake  Utf8.cpp  Utf8Utils.cmake  Utf8Utils.cpp  unittest.cmake
next_kaubo/: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md  TODO.md
next_kaubo/bench/: all.kaubo  all.kaubod  all.kaubor  bench.py  bench.rs  package.json  profile.kaubo  profile_pkg.json  run.ps1
next_kaubo/benchmarks/: fib_recursive.py
next_kaubo/crates/kaubo-ast/: Cargo.toml
next_kaubo/crates/kaubo-compiler/: Cargo.toml
next_kaubo/crates/kaubo-cps/: Cargo.toml
next_kaubo/crates/kaubo-dag/: Cargo.toml
next_kaubo/crates/kaubo-driver/: Cargo.toml
next_kaubo/crates/kaubo-fmt/: Cargo.toml
next_kaubo/crates/kaubo-infer/: Cargo.toml
next_kaubo/crates/kaubo-ir/: Cargo.toml
next_kaubo/crates/kaubo-language-service/: Cargo.toml
next_kaubo/crates/kaubo-log/: Cargo.toml
next_kaubo/crates/kaubo-log-handlers/: Cargo.toml
next_kaubo/crates/kaubo-module/: Cargo.toml
next_kaubo/crates/kaubo-pipeline/: Cargo.toml
next_kaubo/crates/kaubo-runtime/: Cargo.toml
next_kaubo/crates/kaubo-syntax/: Cargo.toml
next_kaubo/crates/kaubo-token/: Cargo.toml
next_kaubo/crates/kaubo-vfs/: Cargo.toml
next_kaubo/crates/kaubo-vm/: Cargo.toml
next_kaubo/crates/kaubo-wasm/: Cargo.toml
next_kaubo/crates/kaubo-web-api/: Cargo.toml
next_kaubo/docs/: 00-getting-started.md  01-syntax.md  02-architecture.md  03-stdlib.md  04-testing.md  05-contributing.md  05-development.md  06-workspace.md  07-config-refactor.md  08-coverage-plan.md  09-type-system-final.md  16-phase1-progress.md  BYTECODE.md  CHANGELOG.md  CLOSURE_COROUTINE_DESIGN.md  COVERAGE.md  ISSUES.md  KAUBO.md  KAUBO_DESIGN.md  README.md  START-HERE.md  architecture-v2-migration.md  architecture-v2.md  architecture.md  artifacts.md  operator_overloading_research.md  package-json.md  基于NaN Boxing的64位字类型标记完整实现方法.md
next_kaubo/docs/00-principles/: README.md
next_kaubo/docs/01-language/: README.md  builtins.md  examples.md  programming-guide.md  syntax.md  types.md
next_kaubo/docs/02-architecture/: README.md  compiler-pipeline.md  module-system.md  overview.md  runtime.md  wasm-bindings.md
next_kaubo/docs/03-playground/: README.md  development.md  editor-features.md  settings.md  themes.md
next_kaubo/docs/04-vscode/: extension.md
next_kaubo/docs/06-design/: execution-plan.md  kaubo-v2.md
next_kaubo/docs/10-constraints/: compatibility.md  complexity-budget.md  performance-limits.md
next_kaubo/docs/20-current/: architecture.md  builtin-methods.md  operator-overloading.md  syntax.md  type-checker-tech-debt.md  type-system.md  vm-tech-debt.md
next_kaubo/docs/30-implementation/: README.md  tech-debt.md
next_kaubo/docs/30-lessons/: discovered-constraints.md  rejected-approaches.md  tracing-to-kaubo-log-migration.md
next_kaubo/docs/40-evolution/: README.md
next_kaubo/docs/50-lessons/: README.md  discovered-constraints.md  operator-research.md  rejected-approaches.md  tracing-migration.md
next_kaubo/docs/90-archive/: 2026-02-16-generic-assessment-v3.md  README.md  assessment.md
next_kaubo/docs/issues/: closure-upvalue-bug.md
next_kaubo/examples/: README.md  builtin_methods.json  builtin_methods.kaubo  calc.kaubo  fib.kaubo  hello.kaubo  kaubo.debug.json  kaubo.json  kaubo.perf.json  kaubo.trace.json  orchestrator_demo.rs
next_kaubo/examples/01_hello/: main.kaubo
next_kaubo/examples/01_hello_world/: main.kaubo  package.json
next_kaubo/examples/02_variables/: main.kaubo  package.json
next_kaubo/examples/02_vars/: main.kaubo
next_kaubo/examples/03_if/: main.kaubo
next_kaubo/examples/04_arith/: main.kaubo
next_kaubo/examples/04_control_flow/: main.kaubo  package.json
next_kaubo/examples/05_functions/: main.kaubo  package.json
next_kaubo/examples/05_print/: main.kaubo
next_kaubo/examples/06_structs/: main.kaubo  package.json
next_kaubo/examples/07_lists/: main.kaubo  package.json
next_kaubo/examples/calc/: main.kaubo  main.kaubod  package.json
next_kaubo/examples/diamond_deps/: common.kaubo  main.kaubo  math.kaubo  package.json  strings.kaubo
next_kaubo/examples/fib/: main.kaubo  package.json
next_kaubo/examples/hello/: main.kaubo  package.json
next_kaubo/examples/import_chain/: app.kaubo  database.kaubo  logger.kaubo  main.kaubo  package.json
next_kaubo/examples/multi_module/: main.kaubo  math.kaubo  package.json  utils.kaubo
next_kaubo/examples/nested_import/: main.kaubo  package.json
next_kaubo/examples/test_binary/: main.kaubo  package.json
next_kaubo/examples/test_multi_module/: main.kaubo  (+2 more)
next_kaubo/gui/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.base.json
next_kaubo/kaubo-api/: Cargo.toml
next_kaubo/kaubo-cli/: Cargo.toml
next_kaubo/kaubo-config/: Cargo.toml
next_kaubo/kaubo-core/: Cargo.toml
next_kaubo/kaubo-log/: Cargo.toml
next_kaubo/kaubo-orchestrator/: Cargo.toml  README.md
next_kaubo/kaubo-vfs/: Cargo.toml
next_kaubo/kaubo2-cli/: Cargo.toml
next_kaubo/nginx/: kaubo.conf
next_kaubo/scripts/: compare_cli.ps1  compare_cli.py  coverage.py  deploy.py  upload.py
next_kaubo/src/: api.rs  config.rs  lib.rs  logger.rs  main.rs
next_kaubo/tests/: crate_boundaries.rs  integration_tests.rs  vm_tests.rs
next_kaubo/tools/: runner.py
(+725 files in other folders)
