[workspace]
members = ["kaubo-config", "kaubo-core", "kaubo-api", "kaubo-cli", "kaubo-log"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kaubo Team"]
repository = "https://github.com/kaubo-lang/kaubo"

[workspace.dependencies]
# 共享依赖
thiserror = "2.0.17"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# kaubo-config (无依赖)

# kaubo-core 依赖
kaubo-config = { path = "kaubo-config" }
kaubo-log = { path = "kaubo-log" }

# kaubo-api 依赖
kaubo-core = { path = "kaubo-core" }

# kaubo-cli 依赖
kaubo-api = { path = "kaubo-api" }
clap = { version = "4", features = ["derive"] }

# 虚拟包配置（满足 Cargo 要求）
[package]
name = "kaubo-workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"

