[workspace]
members = [
    "crates/kaubo-token",
    "crates/kaubo-ast",
    "crates/kaubo-syntax",
    "crates/kaubo-infer",
    "crates/kaubo-cps",
    "crates/kaubo-ir",
    "crates/kaubo-vm",
    "crates/kaubo-driver",
    "crates/kaubo-language-service",
    "crates/kaubo-web-api",
    "crates/kaubo-wasm",
    "crates/kaubo-log",
    "crates/kaubo-log-handlers",
    "kaubo2-cli",
]
resolver = "2"
default-members = [
    "crates/kaubo-token",
    "crates/kaubo-ast",
    "crates/kaubo-syntax",
    "crates/kaubo-infer",
    "crates/kaubo-cps",
    "crates/kaubo-ir",
    "crates/kaubo-vm",
    "crates/kaubo-driver",
    "crates/kaubo-language-service",
    "crates/kaubo-web-api",
    "crates/kaubo-wasm",
    "crates/kaubo-log",
    "crates/kaubo-log-handlers",
    "kaubo2-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kaubo Team"]
repository = "https://github.com/kaubo-lang/kaubo"

[workspace.dependencies]
thiserror = "2.0.17"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

kaubo-ast = { path = "crates/kaubo-ast" }
kaubo-token = { path = "crates/kaubo-token" }
kaubo-syntax = { path = "crates/kaubo-syntax" }
kaubo-infer = { path = "crates/kaubo-infer" }
kaubo-cps = { path = "crates/kaubo-cps" }
kaubo-ir = { path = "crates/kaubo-ir" }
kaubo-vm = { path = "crates/kaubo-vm" }
kaubo-driver = { path = "crates/kaubo-driver" }
kaubo-language-service = { path = "crates/kaubo-language-service" }
kaubo-web-api = { path = "crates/kaubo-web-api" }
kaubo-log = { path = "crates/kaubo-log" }
kaubo-log-handlers = { path = "crates/kaubo-log-handlers" }

clap = { version = "4", features = ["derive"] }

[package]
name = "kaubo-workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
overflow-checks = false
codegen-units = 1
