[package]
name = "kaubo-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo language API - execution orchestration and unified interfaces"

[dependencies]
kaubo-config = { workspace = true }
kaubo-core = { workspace = true }
kaubo-log = { workspace = true, features = ["alloc", "stdout"] }
kaubo-vfs = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
