[package]
name = "kaubo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo language CLI - Command line interface"

[[bin]]
name = "kaubo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

kaubo-compiler = { path = "../crates/kaubo-compiler" }
kaubo-runtime = { path = "../crates/kaubo-runtime" }
kaubo-ir = { path = "../crates/kaubo-ir" }
kaubo-log = { path = "../kaubo-log" }
