[package]
name = "kaubo-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo language configuration types - pure data structures"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
