[package]
name = "kaubo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo language core - lexer, parser, compiler, and VM"

[features]
trace_execution = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
kaubo-config = { workspace = true }
kaubo-log = { workspace = true }
