[package]
name = "kaubo-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo language orchestrator - pipeline execution and component management"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 内部依赖
kaubo-config = { workspace = true }
kaubo-vfs = { workspace = true }
kaubo-log = { workspace = true, features = ["stdout"] }

[dev-dependencies]
# 测试依赖
