[package]
name = "kaubo2-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo v2 CLI — full pipeline: parse → infer → lower → execute"

[dependencies]
kaubo-syntax = { path = "../crates/kaubo-syntax" }
kaubo-infer = { path = "../crates/kaubo-infer" }
kaubo-ir = { path = "../crates/kaubo-ir" }
kaubo-vm = { path = "../crates/kaubo-vm" }
