[package]
name = "kaubo2-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo v2 CLI — direct driver: parse → infer → lower → execute"

[dependencies]
kaubo-driver = { workspace = true }
kaubo-vm = { workspace = true }
kaubo-log = { workspace = true }
kaubo-log-handlers = { workspace = true }
