[package]
name = "kaubo-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo direct compile and run driver"

[dependencies]
kaubo-ast = { workspace = true }
kaubo-syntax = { workspace = true }
kaubo-infer = { workspace = true }
kaubo-ir = { workspace = true }
kaubo-vm = { workspace = true }
kaubo-log = { workspace = true }
kaubo-vfs = { workspace = true }
kaubo-dag = { workspace = true }
futures = { workspace = true }
