[package]
name = "kaubo-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo v2 CPS IR types and AST→CPS lowering"

[dependencies]
kaubo-cps = { path = "../kaubo-cps" }
kaubo-ast = { path = "../kaubo-ast" }
serde = { version = "1", features = ["derive"] }
