[package]
name = "kaubo-language-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo tooling language service"

[dependencies]
kaubo-syntax = { workspace = true }
kaubo-web-api = { workspace = true }
kaubo-driver = { workspace = true }
kaubo-dag = { workspace = true }
kaubo-ast = { workspace = true }
kaubo-infer = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
