[package]
name = "kaubo-log-handlers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Concrete EventHandler implementations for the Kaubo toolchain (ConsoleHandler, CompositeHandler, KAUBO_LOG env parsing)"

[dependencies]
kaubo-log = { path = "../kaubo-log" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
