[package]
name = "kaubo-module"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo v2 module system — import resolution, multi-file, .kaubop packaging"

[dependencies]
kaubo-syntax = { path = "../kaubo-syntax" }
kaubo-infer = { path = "../kaubo-infer" }
kaubo-ir = { path = "../kaubo-ir" }
serde_json = "1"
