[package]
name = "kaubo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kaubo runtime (VM, operators, stdlib, binary reader)"

[dependencies]
kaubo-ir = { path = "../kaubo-ir" }
kaubo-log = { workspace = true }
kaubo-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
