[package]
name = "kaubo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind"
opt-level = "s"
lto = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
kaubo-compiler = { path = "../kaubo-compiler" }
kaubo-runtime = { path = "../kaubo-runtime" }
kaubo-ir = { path = "../kaubo-ir" }
kaubo-log = { path = "../../kaubo-log", default-features = false, features = ["wasm"] }
kaubo-vfs = { path = "../../kaubo-vfs" }
