[package]
name = "kaubo-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind"
opt-level = "s"
lto = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
once_cell = { workspace = true }
serde_json = { workspace = true }
kaubo-syntax = { workspace = true }
kaubo-infer = { workspace = true }
kaubo-ir = { workspace = true }
kaubo-vm = { workspace = true }
kaubo-web-api = { workspace = true }
